# d2run-oss

./: .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  CLOUD_SYNC.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  README_zh.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  models.rs  utils.rs
src/assets/: main.css
src/cloud/: README.md  cloud.interface.ts  cloud.stub.ts  index.ts
src/components/: ToastContainer.vue
src/composables/core/: useConfig.ts  useI18n.ts  useNavigation.ts  useTheme.ts  useTimer.ts  useToast.ts  useWindow.ts
src/composables/data/: useCloudSync.ts  useDashboard.ts  useHistory.ts  useStats.ts
src/composables/features/: useDropRecording.ts  useRunLifecycle.ts  useScenario.ts  useSearch.ts  useSession.ts
src/data/: items.ts  scenes.ts
src/shared/: constants.ts  dashboardTemplate.ts  data.ts  locales.ts  themes.ts  types.ts  utils.ts
src/stores/: runStore.ts
src/views/: AboutView.vue  HistoryView.vue  HomeView.vue  SelectionView.vue  SettingsView.vue  TimerView.vue
